# chatbot

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py  upload.sh
chatbot/: interface.py
chatinterface/: __init__.py  __main__.py  chatbot.py  interface.py  plugin.py
tests/: _example.py  api.py
