[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.9"
name = "chatinterface"
authors = [{"name" = "Juris Kaminskis", "email" = "juris@kolumbs.net"}]
readme = "README.md"
description = "Simple chatbot"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["chat", "chatbot"]
requires-python = ">=3.11.1"
dependencies = [
    "zoozl>=0.2.7,<1.0",
    "openai-agents==0.6.2",
]

[project.urls]
Repository = "https://github.com/Kolumbs/chatbot"

[tool.black]
line-length = 80

[tool.docformatter]
wrap-summaries = 80
